<resources>
    <string name="app_name">LoginUsingMVVM</string>
    <string name="tv_title_Sign_up_now">Sign Up Now</string>
    <string name="tv_title_Sign_in_now">Sign In Now</string>
    <string name="tv_title_please_fill_the_details_and_create_account">Please fill the details and create account</string>
    <string name="edt_title_fullname">Fullname</string>
    <string name="edt_title_email">Email</string>
    <string name="edt_title_password">Password</string>
    <string name="btn_title_Sign_up">SignUp</string>
    <string name="tv_title_already_have_an_account">Already Have An Account?</string>
    <string name="tv_title_Sign_in">Sign In</string>
    <string name="tv_title_or_connect_with">Or Connect With</string>
    <string name="full_name_error_name_is_required">Name is Required</string>
    <string name="email_error_name_is_required">Email is Required</string>
    <string name="password_error_name_is_required">Password is Required</string>
    <string name="password_error_atLeast_six_character">Password Must be atLeast six character</string>
    <string name="email_error_email_is_not_valid">Email is Not Valid</string>
    <string name="tv_title_please_sign_in_to_continue_our_app">Please Sign in to Continue our app</string>
    <string name="tv_title_forgot_password">Forgot Password?</string>
    <string name="btn_title_Sign_in">Sign In</string>
    <string name="tv_title_don_t_have_an_account">Don\'t Have An Account</string>
    <string name="tv_title_Sign_up">Sign Up</string>
    <string name="tv_title_or_connect">Or Connect</string>
    <string name="tv_title_welcome">Welcome</string>
    <string name="tv_title_create_an_account_and_access_thousand_of_cool_stuffs">Create an account and access thousand of cool stuffs</string>
    <string name="toast_title_No_Internet">Please check your internet connection or try again later</string>
    <string name="btn_title_getting_started">Getting Started</string>
    <string name="tool_title_name">Name</string>
    <string name="tool_title_email">Email</string>
    <string name="option_menu_title_logout">Logout</string>
    <string name="dialog_title_Sign_in">Sign In</string>
    <string name="dialog_title_Sign_up">Sign Up</string>
    <string name="progress_dialog_loading">Loading..</string>
    <string name="tv_title_select_image">Select Image</string>
    <string name="toast_title_gallery_permission_granted">Gallery Permission is granted</string>
    <string name="toast_title_camera_permission_granted">Gallery Permission is granted</string>
    <string name="toast_title_gallery_permission_denied">Gallery Permission is denied</string>
    <string name="toast_title_camera_permission_denied">Gallery Permission is denied</string>
    <string name="dialog_open">Open</string>
    <string name="dialog_title_select_image">Select Image</string>
    <string name="toast_please_select_image">please select image</string>
    <string name="alertdialog_camera_permission">Please go to Settings to enable Camera Permission so you can capture Image(Settings-Apps-MyCam-Permission-Camera)</string>
    <string name="alertdialog_gallery_permission">Please go to Settings to enable Gallery Permission so you can tack Image(Settings-Apps-MyCam-Permission-Storage)</string>
</resources>